feat(wip): update mfe2.0 example to include select util functions from kw-utils and update rsbuild config

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ lerna-debug.log*
 
 node_modules
 dist/
+dist-dev
+dist-development
+dist-qa
+dist-prod
+dist-production
 dist-ssr
 *.local
 build
