--- a/examples/mf2.0/shell/package.json
+++ b/examples/mf2.0/shell/package.json
@@ -8,6 +8,7 @@
     "check": "biome check --write",
     "dev": "rsbuild dev --open --environment prod",
     "format": "biome format --write",
+    "lint": "biome lint --error-on-warnings --write",
     "preview": "rsbuild preview"
   },
   "dependencies": {
